syntax = "proto3";

import "google/protobuf/empty.proto";

option go_package = "orcanet/market/market";

package market;

service Market {
  // register a file on the market
  rpc RegisterFile (RegisterFileRequest) returns (google.protobuf.Empty) {}

  // check for holders of a file. returns a list of users
  rpc CheckHolders (CheckHoldersRequest) returns (HoldersResponse) {}
}

message User {
  //public key in raw bytes
  bytes id = 1;

  string ip = 2;
  int32 port = 3;

  // price per mb for a file
  int64 price = 4;
}

message CheckHoldersRequest {
  string fileHash = 1;
}

message RegisterFileRequest {
  User user = 1;
  string fileHash = 2;
}

message HoldersResponse {
  repeated User holders = 1;
}
